Adding article section

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <article>
                     <a href=#><h2>Build Free Websites - Wix.com</h2></a>
                     <p class="url"><span>Ad</span> www.wix.com/Create-New-Websites‎</p>
-                    <p>rating stars</p>
-                    <p>
+                    <p class="rating"><img src="images/stars.png"> Rating for wix.com: 3.8 - 261 reviews</p>
+                    <p class="blurb">
                         Design Your Own Free Websites with Ease & Look Professional for Free! 
                         Trusted By Over 95M Users. Try It Free. Easy To Use. Easily Customizable. 
                         Flexible plans.
