--- a/index.html
+++ b/index.html
@@ -47,15 +47,169 @@
       <article>
         <a href=#><h2>Build Free Websites - Wix.com</h2></a>
         <p class="url"><span>Ad</span> www.wix.com/Create-New-Websites‎</p>
-        <p class="rating"><img src="images/stars.png"> Rating for wix.com: 3.8 - 261 reviews</p>
+        <p class="rating"><img src="images/stars.png"> Rating for wix.com: 4.7 - 261 reviews</p>
         <p class="blurb">
           Design Your Own Free Websites with Ease & Look Professional for Free!
           Trusted By Over 95M Users. Try It Free. Easy To Use. Easily Customizable.
           Flexible plans.
         </p>
       </article>
+
+      <article>
+        <a href=#><h2>With zero coding experience, artist building 180 webpages in 180 days</h2></a>
+        <p class="url">https://arstechnica.com/.../with-zero-coding-experience-artist-building-180-webpages-...‎</p>
+        <p class="blurb">
+          26 Jul 2013 - 117 days ago, having never done any programming in her life,
+          Jennifer Dewalt built her first webpage. The next day, she built another, and she ...
+        </p>
+      </article>
+
+      <section>
+        <table>
+          <tr>
+            <th>People also ask</th>
+          </tr>
+          <tr>
+            <td>How can I create a website for my business?<i class="down"></i></td>
+          </tr>
+          <tr>
+            <td>Where can I build a website from scratch?<i class="down"></i></td>
+          </tr>
+          <tr>
+            <td>How do you create a website for free?<i class="down"></i></td>
+          </tr>
+          <tr>
+            <td>How can I create a website using HTML?<i class="down"></i></td>
+          </tr>
+        </table>
+      </section>
+
+      <p class="feedback">Feedback</p>
+
+      <article>
+        <a href=#><h2>build this webpage - GitHub Pages</h2></a>
+        <p class="url">https://christine-27.github.io/google-homepage/-...‎</p>
+        <p class="blurb">
+          With zero coding experience, artist building 180 webpages . ... days ago,
+          having never done any programming in her life, Jennifer Dewalt built her first webpage.
+        </p>
+      </article>
+
+      <article>
+        <a href=#><h2>Google Homepage</h2></a>
+        <p class="url">swatikumar16.github.io/google-homepage/‎</p>
+        <p class="blurb">
+          With zero coding experience, artist building 180 webpages ...
+          arstechnica.com/.../with-zero-coding-experience-artist-build... Ars Technica. Jul 26, 2013 - 117 ...
+        </p>
+      </article>
+
+      <article>
+        <a href=#><h2>Jennifer Dewalt — I'm learning to code by building 180 websites in...</h2></a>
+        <p class="url">blog.jenniferdewalt.com/post/.../im-learning-to-code-by-building-180-websites-in‎</p>
+        <p class="blurb">
+          24 Jul 2013 - Build a different website every day for 180 consecutive days.
+          Every website must be accompanied by a blog post. Any code I write must be ...
+        </p>
+      </article>
+
+      <article>
+        <a href=#><h2>How to Create a Website: Step-by-Step Guide for Beginners (2019)</h2></a>
+        <p class="url">https://websitesetup.org/</p>
+        <p class="blurb">
+          Learn how to make a website and set it up.
+          This site contains different tutorials on how to build a website using WordPress, Joomla, Drupal & HTML.
+        </p>
+      </article>
+
+      <article>
+        <a href=#><h2>Make a Website: Free Tutorial | Codecademy</h2></a>
+        <p class="url">https://www.codecademy.com/learn/make-a-website</p>
+        <p class="blurb">
+          Explore HTML & CSS fundamentals as you build a website in this ...
+          You'll build four simple websites using web development fundamentals, including HTML5, ...
+        </p>
+      </article>
+
+      <article>
+        <a href=#><h2>With zero coding experience, artist building 180 webpages in 180 days</h2></a>
+        <p class="url">https://arstechnica.com/.../with-zero-coding-experience-artist-building-180-webpages-...‎</p>
+        <p class="blurb">
+          26 Jul 2013 - 117 days ago, having never done any programming in her life,
+          Jennifer Dewalt built her first webpage. The next day, she built another, and she ...
+        </p>
+      </article>
+
+      <article>
+        <a href=#><h2>Free Website Builder For Your Business - Google My Business</h2></a>
+        <p class="url">https://www.google.com › Google My Business › How It Works‎</p>
+        <p class="blurb">
+          Google My Business can automatically generate a website for
+          you for free using info from your Business Profile, and you can edit it anytime.
+        </p>
+      </article>
+
+      <article>
+        <a href=#><h2>Free Website Builder: Build a Free Website or Online Store | Weebly</h2></a>
+        <p class="url">https://www.weebly.com/uk‎</p>
+        <p class="blurb">
+          Weebly's free website builder makes it easy to build a website, blog, or online store.
+          Find customizable designs, domains, and eCommerce tools for any type of ...
+        </p>
+      </article>
+
+      <article>
+        <a href=#><h2>How To Build a Website - W3Schools</h2></a>
+        <p class="url">https://www.w3schools.com/howto/howto_website.asp</p>
+        <p class="blurb">
+          It is always wise to draw a layout draft of the page design before building a website.
+          Having a "Layout Draft" will make it a lot easier to create a web site: ...
+        </p>
+      </article>
+
+      <article>
+        <a href=#><h2>Webnode: Create a free website easily | Free website builder</h2></a>
+        <p class="url">https://www.webnode.com/</p>
+        <p class="blurb">
+          You can create an amazing website with Webnode in just minutes. ...
+          Build a website for your business, start your own blog or share your portfolio online.
+        </p>
+      </article>
+
+      <section class="end-search-section">
+        <h3 class="end-search-title">Searches related to build this webpage</h3>
+        <a href="#" class="end-search-links">
+          <ul>
+            <li>new website everyday</li>
+            <li>jennifer dewalt</li>
+            <li>one project a day</li>
+            <li>how to build a website from scratch</li>
+            <li>creating a website for your business</li>
+            <li>build a website from scratch using html & css</li>
+            <li>javascript project a day</li>
+            <li>one person website</li>
+          </ul>
+        </a>
+      </section>
+
     </div>
     <div class="col-3"></div>
+
+    <footer id="footer-1">
+      <p>United Kingdom</p>
+    </footer>
+
+    <footer id="footer-2">
+      <div class="footer-div-2">
+        <ul>
+          <li>Help</li>
+          <li>Send feedback</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+        </ul>
+      </div>
+    </footer>
+
   </main>
 </body>
 </html>
