Adding bottom logo & finishing up

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="header-1">
       <div class="search-bar">
         <img id="google-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
-        <input type="text" maxlength="2048">
+        <input type="text" maxlength="2048" value="build this webpage">
       </div>
       <div class="icons">
         <ul>
@@ -191,6 +191,34 @@
           </ul>
         </a>
       </section>
+
+      <div class="logo-search">
+        <span class="Go"></span>
+        <span class="o"></span>
+        <span class="o"></span>
+        <span class="o"></span>
+        <span class="o"></span>
+        <span class="o"></span>
+        <span class="o"></span>
+        <span class="o"></span>
+        <span class="o"></span>
+        <span class="o"></span>
+        <span class="gle"></span>
+        <div class="small-links">
+          <a href=#><ul>
+            <li>1</li>
+            <li>2</li>
+            <li>3</li>
+            <li>4</li>
+            <li>5</li>
+            <li>6</li>
+            <li>7</li>
+            <li>8</li>
+            <li>9</li>
+            <li style="margin-left: 60px;">next</li>
+          </ul></a>
+        </div>
+      </div>
 
     </div>
     <div class="col-3"></div>
